updating swagger, workin on routes/fixing rest >.<
