# routes/schools.js
@@ -1,16 +1,17 @@
 const express = require('express');
 const router = express.Router();
+const { requiresAuth } = require('express-openid-connect');
 
 const schools = require('../controllers/schools');
 
 // GET /feed/posts
 
-router.put('/:id', schools.updateSchool);
-
-router.delete('/:id', schools.deleteSchool);
-
 router.post('/', schools.addSchool);
 
-router.get('/:id', schools.getOneSchool);
+router.put('/:id', requiresAuth(), schools.updateSchool);
+
+router.delete('/:id', requiresAuth(), schools.deleteSchool);
+
+router.get('/:id', requiresAuth(), schools.getOneSchool);
 
 module.exports = router;
